# fastapi-learn

./: database.db  pyproject.toml
app/: main.py
app/core/: ctx.py  dependency.py  exceptions.py  init_app.py
app/model/: hero.py
app/routers/: __init__.py  default.py  sql.py
