[project]
name = "fastapi-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.127.0",
    "uvicorn>=0.40.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.29",
]

[project.scripts]
start = "uvicorn app.main:app --reload"
